# analise-ch-boot

./: README.md  nohup.out  requirements.txt  restart.sh  sportmonks_probe.sh  start.sh  status.sh  stop.sh
AnalisadorCHBot/: .env  .token  data_fetcher.py  data_pipeline.py  ia_adaptativa.py  keep_alive.py  main.py
ApostadorCHBot/: README.md  analise_jogos.py  data_fetcher.py  data_fetcher_sportmonks.py  historico.csv  historico_serie.csv  ia_adaptativa.py  keep_alive.py  main.py  pyproject.toml  requirements.txt  test_fetcher.py
